correct error of console

--- a/project.config.json
+++ b/project.config.json
@@ -9,7 +9,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "1.9.93",
-	"appid": "touristappid",
+	"appid": "wxb06d166ba443ae8a",
 	"projectname": "weather",
 	"condition": {
 		"search": {
